workspace = { members = ["clock"] }
[package]
name = "mget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
env_logger = "0.6"
log = "0.4"
rand = "0.7"
url = "2.0.0"

[dependencies.trust-dns]
version = "0.16"
default_features = false
[dependencies.smoltcp]
version = "0.6"
default_features = true
features = ["proto-igmp", "proto-ipv4", "verbose", "log"]
